--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,16 @@
     <maven.compiler.release>11</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    
+
     <!-- connector SDK version -->
-    <version.connector-core>0.1.0</version.connector-core>
-    
+    <version.connector-core>0.2.0-SNAPSHOT</version.connector-core>
+
     <!-- external libraries -->
     <version.assertj>3.23.1</version.assertj>
     <version.junit-jupiter>5.9.0</version.junit-jupiter>
     <version.mockito>4.7.0</version.mockito>
     <version.slf4j>1.7.36</version.slf4j>
-    
+
     <!-- maven plugins -->
     <plugin.version.maven-clean-plugin>3.2.0</plugin.version.maven-clean-plugin>
     <plugin.version.maven-compiler-plugin>3.10.1</plugin.version.maven-compiler-plugin>
@@ -39,11 +39,16 @@
       <version>${version.connector-core}</version>
     </dependency>
     <dependency>
+      <groupId>io.camunda.connector</groupId>
+      <artifactId>connector-validation</artifactId>
+      <version>${version.connector-core}</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${version.slf4j}</version>
     </dependency>
-    
+
     <!-- test dependencies -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -66,7 +71,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
   <build>
     <pluginManagement>
       <plugins>
